[package]
name = "options_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
[dependencies]
tokio = {version ="*", features = ["macros","time","rt-multi-thread"]}
reqwest = {version = "*", features = ["json"]}
serde_json = "*"
chrono = "*"
chrono-tz = "*"
serde = {version = "*", features = ["derive"]}
csv = "*"
async_ftp = "*"
itertools = "*"
serde_repr = "*"